--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@jirkakrepl/chimpy",
-  "version": "3.0.5",
+  "version": "3.0.6",
   "description": "Develop acceptance tests & end-to-end tests with realtime feedback.",
   "keywords": [
     "simian",
@@ -18,11 +18,11 @@
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/TheBrainFamily/chimpy.git"
+    "url": "git+https://github.com/jirikrepl/chimpy.git"
   },
-  "homepage": "https://github.com/TheBrainFamily/chimpy#readme",
+  "homepage": "https://github.com/jirikrepl/chimpy#readme",
   "bugs": {
-    "url": "https://github.com/TheBrainFamily/chimpy/issues"
+    "url": "https://github.com/jirikrepl/chimpy/issues"
   },
   "watch": {
     "prepare": "src/{lib,bin}/**/*.js"
