--- a/.babelrc
+++ b/.babelrc
@@ -1,4 +1,8 @@
 {
-  "plugins": ["@babel/plugin-proposal-export-default-from", "@babel/plugin-transform-runtime", "@babel/plugin-proposal-class-properties"],
+  "plugins": [
+    "@babel/plugin-proposal-export-default-from",
+    "@babel/plugin-transform-runtime",
+    "@babel/plugin-proposal-class-properties"
+  ],
   "presets": ["@babel/preset-env"]
 }
